Chat app: prevent time tooltip from overlapping with scrollbar.
darcs-hash:20071230163230-8cc29-4c3d42b6cd29a4ca6d4496ea9fa08abb05b69438.gz

--- a/chrome/content/app/style/chat.css
+++ b/chrome/content/app/style/chat.css
@@ -288,7 +288,7 @@ ul#messages {
     display: none;
     z-index: 100;
     top: 0;
-    right: 10px;
+    right: 18px;
     text-align: center;
     background: #C4C4FF;
     padding: 0.2em;
